[metadata]
name = onso-aligner
version = attr: onso_aligner.VERSION
description = Get the forced alignment of phonemes
url = https://github.com/darashi/onso_aligner
author_email = dara@shidara.net
author = Yoji Shidara
long_description = file: README.md
long_description_content_type = text/markdown
keywords = julius, forced alignment
license = MIT

[options]
packages = find:
install_requires =
    librosa
    SoundFile
    jaconv

[options.packages.find]
exclude =
    tests

[options.extras_require]
test = pytest
